[gd_scene format=3 uid="uid://cqxwt12wnh215"]

[ext_resource type="Script" uid="uid://bggd2grbwwose" path="res://Scripts/final_level_html.gd" id="1_d8qry"]
[ext_resource type="Texture2D" uid="uid://cchw0nrt5a14n" path="res://Art Assets/backgrounds/bground.png" id="1_gk8ci"]
[ext_resource type="FontFile" uid="uid://ctac5wch5ukxl" path="res://Art Assets/VCR_OSD_MONO_1.001.ttf" id="2_d8qry"]
[ext_resource type="Texture2D" uid="uid://buv67q5krfss" path="res://Art Assets/buttons/stonebutton.png" id="3_wf3ri"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hdrdx"]
texture = ExtResource("1_gk8ci")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4mpnc"]
texture = ExtResource("3_wf3ri")
expand_margin_left = 15.0
expand_margin_right = 15.0
region_rect = Rect2(67.68807, 53.68726, 184.39017, 72.433304)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_34tcq"]
texture = ExtResource("3_wf3ri")
expand_margin_left = 20.0
expand_margin_top = 10.0
expand_margin_right = 20.0
expand_margin_bottom = 10.0
region_rect = Rect2(67.79819, 53.921593, 184.30623, 72.180504)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mjt5w"]
texture = ExtResource("3_wf3ri")
texture_margin_left = 20.0
texture_margin_top = 10.0
texture_margin_right = 20.0
texture_margin_bottom = 15.0
region_rect = Rect2(67.177315, 53.123344, 185.42703, 73.555244)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cu3i1"]
texture = ExtResource("3_wf3ri")
expand_margin_top = 10.0
expand_margin_bottom = 15.0
region_rect = Rect2(67.8661, 53.960724, 184.1995, 72.08902)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8718q"]
texture = ExtResource("3_wf3ri")
region_rect = Rect2(67.68807, 53.68726, 184.39017, 72.433304)

[node name="Control2" type="Control" unique_id=1592765906]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d8qry")

[node name="Panel" type="Panel" parent="." unique_id=61120080]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hdrdx")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1137178732]
visible = false

[node name="Label" type="Label" parent="CanvasLayer" unique_id=1783730300]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -666.5
offset_top = -447.0
offset_right = 666.5
offset_bottom = -293.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 175
text = "ELEMENTS & TAGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question" type="Label" parent="CanvasLayer" unique_id=169811707]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -513.0
offset_top = -155.0
offset_right = 513.0
offset_bottom = 208.2782
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 60
text = "An element is the Start Tag + Content + End Tag.
End Tags use a forward slash / (e.g., </p>).
Empty Elements (like <br>) don't need a closing tag."
autowrap_mode = 2

[node name="Understand" type="Button" parent="CanvasLayer" unique_id=928788947]
offset_left = 452.0
offset_top = 867.0
offset_right = 897.0
offset_bottom = 958.05145
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_4mpnc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_4mpnc")
theme_override_styles/hover = SubResource("StyleBoxTexture_4mpnc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_4mpnc")
text = "I dont understand"
autowrap_mode = 2

[node name="Next" type="Button" parent="CanvasLayer" unique_id=1877815207]
offset_left = 1027.0
offset_top = 879.582
offset_right = 1387.0
offset_bottom = 948.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxTexture_34tcq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_34tcq")
theme_override_styles/hover = SubResource("StyleBoxTexture_34tcq")
theme_override_styles/disabled = SubResource("StyleBoxTexture_34tcq")
text = "NEXT"

[node name="Explanation" type="Panel" parent="CanvasLayer" unique_id=526459294]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.65027
offset_top = -239.0
offset_right = 292.65015
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Explanation" unique_id=1521533501]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 6.0
offset_right = 113.0
offset_bottom = 37.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 35
text = "SIMPLE EXPLANATION"

[node name="X button" type="Button" parent="CanvasLayer/Explanation" unique_id=726435686]
layout_mode = 0
offset_left = 567.65027
offset_top = -22.0
offset_right = 631.65027
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_mjt5w")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mjt5w")
theme_override_styles/hover = SubResource("StyleBoxTexture_mjt5w")
theme_override_styles/disabled = SubResource("StyleBoxTexture_mjt5w")
text = "X"

[node name="simple explanation" type="Label" parent="CanvasLayer/Explanation" unique_id=997223036]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.00003
offset_top = -219.0
offset_right = 278.00006
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 45
text = "An element is a Wrapped Candy Bar. The tags are the wrapper, and the text is the chocolate!"
autowrap_mode = 2

[node name="buttons" type="VBoxContainer" parent="CanvasLayer" unique_id=1422494086]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 121.0
offset_top = -173.0
offset_right = 306.5263
offset_bottom = -120.0
grow_vertical = 0
theme_override_constants/separation = 30

[node name="Back" type="Button" parent="CanvasLayer/buttons" unique_id=722502886]
layout_mode = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_d8qry")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_cu3i1")
theme_override_styles/pressed = SubResource("StyleBoxTexture_cu3i1")
theme_override_styles/hover = SubResource("StyleBoxTexture_cu3i1")
theme_override_styles/disabled = SubResource("StyleBoxTexture_cu3i1")
text = "BACK"

[node name="Control" type="Control" parent="." unique_id=959744588]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Yes" type="Button" parent="Control" unique_id=1510414914]
layout_mode = 0
offset_left = 717.0
offset_top = 462.0
offset_right = 986.0
offset_bottom = 618.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxTexture_8718q")
theme_override_styles/pressed = SubResource("StyleBoxTexture_8718q")
theme_override_styles/hover = SubResource("StyleBoxTexture_8718q")
theme_override_styles/disabled = SubResource("StyleBoxTexture_8718q")
text = "YES"

[node name="No" type="Button" parent="Control" unique_id=1261798294]
layout_mode = 0
offset_left = 1043.0
offset_top = 462.0
offset_right = 1312.0
offset_bottom = 618.0
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxTexture_8718q")
text = "NO"

[node name="Label" type="Label" parent="Control" unique_id=1202107199]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -551.0
offset_top = 93.0
offset_right = 551.0
offset_bottom = 272.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.9529412, 0.77254903, 0.46666667, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -10
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 100
text = "ARE YOU READY FOR THE FINAL TEST?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="CanvasLayer/Understand" to="." method="_on_understand_pressed"]
[connection signal="pressed" from="CanvasLayer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Explanation/X button" to="." method="_on_x_button_pressed"]
[connection signal="pressed" from="CanvasLayer/buttons/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Control/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Control/No" to="." method="_on_no_pressed"]
